[build-system]
requires = ["setuptools>=68.2.2", "wheel>=0.41.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nasa-space-app-api"
version = "1.0.0"
description = "NASA Space App Challenge 2025 API"
requires-python = ">=3.11"
dependencies = [
    "Flask>=2.2.5",
    "numpy>=1.23.5",
    "pandas>=1.5.3",
    "scikit-learn>=1.2.2",
    "joblib>=1.2.0",
    "gunicorn>=20.1.0",
]
